front page form behaviors:  * disable some form elements after user has logged in  * allow user to change UI language after logging in, while maintaining form appearance  * fix alignment of form labels
git-svn-id: https://gtsvn.uit.no/langtech/trunk/apps/aajege@88626 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/sma-client/app/views/intro/styles/intro.styl
+++ b/src/sma-client/app/views/intro/styles/intro.styl
@@ -25,6 +25,12 @@
         margin-top: .25em
         margin-bottom: .25em
 
+    h2.legend.disabled
+        opacity: .5
+
+    h2.legend.no_disable.disabled
+        opacity: 1 !important
+
     #help_language
         padding-top: 0px
 
